# laaf-V2.0

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
configs/: default.yaml  enterprise.yaml
configs/stages/: s1_recon.yaml  s2_injection.yaml  s3_trigger.yaml  s4_persistence.yaml  s5_evasion.yaml  s6_trace_tamper.yaml
docs/: architecture.md  custom-llm.md  enterprise-guide.md  quickstart.md  reports.md  stage-breaker.md  taxonomy.md
examples/: basic_scan.py  custom_platform.py  enterprise_scan.py  export_manual_payloads.py  generate_model_reports.py  paper_table2_scan.py
laaf/: __init__.py
laaf/api/: __init__.py  auth.py  models.py  server.py
laaf/api/routes/: health.py  reports.py  scans.py  techniques.py
laaf/cli/: __init__.py  main.py
laaf/config/: __init__.py  settings.py
laaf/core/: __init__.py  analyser.py  engine.py  executor.py  logger.py  mutator.py  stage_breaker.py
laaf/dashboard/static/: app.js  style.css
laaf/dashboard/templates/: index.html
laaf/generators/: __init__.py  payload_generator.py
laaf/reporting/: __init__.py  csv_reporter.py  html_reporter.py  json_reporter.py  pdf_reporter.py
laaf/taxonomy/: __init__.py  base.py  encoding.py  exfiltration.py  layered.py  semantic.py  structural.py  triggers.py
laaf/utils/: __init__.py  hash_registry.py  rate_limiter.py  validators.py
paper/: LAAF_Paper.tex
results/paper_table2/: README.md  figure6_data.tex  table2.tex  table2_results.json
results/paper_table2/reports/: report_ChatGPT.html  report_Claude.html  report_Gemini-2.html  report_LLaMA3-70B.html  report_Mixtral-8x7b.html
results/paper_verification/: figure6_data.tex  table2.tex  table2_results.json
results/paper_verification_v2/: figure6_baseline.tex  figure6_psb.tex  table2_baseline.tex  table2_psb.tex  table2_results.json
results/paper_verification_v3/: table2_results.json
results/paper_verification_v4/: figure6_baseline.tex  table2_baseline.tex  table2_results.json
results/paper_verification_v4_psb/: figure6_psb.tex  table2_psb.tex  table2_results.json
tests/: conftest.py
tests/integration/: test_api.py  test_mock_platform.py
tests/unit/: test_analyser.py  test_encoding.py  test_layered.py  test_mutator.py  test_payload_generator.py  test_semantic.py  test_stage_breaker.py  test_stage_engine.py  test_structural.py  test_taxonomy.py  test_triggers.py
