[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "laaf"
version = "0.1.0"
description = "Logic-layer Automated Attack Framework — Enterprise LPCI Red-Teaming for Agentic LLM Systems"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Hammad Atta", email = "hatta@qorvexconsulting.com" },
    { name = "Ken Huang" },
    { name = "Manish Bhatt" },
    { name = "Kamal Ahmed" },
    { name = "Muhammad Aziz Ul Haq" },
    { name = "Yasir Mehmood" },
]
keywords = [
    "llm-security", "prompt-injection", "red-teaming", "lpci",
    "agentic-ai", "rag-security", "ai-security", "owasp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "aiohttp>=3.9",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "structlog>=24.1",
    "rich>=13.7",
    "PyYAML>=6.0",
    "reportlab>=4.1",
    "httpx>=0.27",
    "anyio>=4.3",
    "python-dotenv>=1.0",
    "tabulate>=0.9",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "httpx>=0.27",
    "respx>=0.21",
]

[project.scripts]
laaf = "laaf.cli.main:cli"

[project.entry-points."laaf.techniques"]
# Example: third-party plugin entry point
# my_technique = "my_package.techniques:MyTechnique"

[project.urls]
Homepage = "https://github.com/qorvexconsulting1/laaf"
Documentation = "https://github.com/qorvexconsulting1/laaf/tree/main/docs"
Repository = "https://github.com/qorvexconsulting1/laaf"
Issues = "https://github.com/qorvexconsulting1/laaf/issues"
Paper = "https://arxiv.org/abs/2507.10457"

[tool.hatch.build.targets.wheel]
packages = ["laaf"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["B008", "N806"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["laaf"]
omit = ["tests/*", "examples/*"]
